--- a/app/src/main/res/layout/activity_plasma_detail.xml
+++ b/app/src/main/res/layout/activity_plasma_detail.xml
@@ -56,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:background="#3D4047"
+                android:background="@drawable/btn1"
                 android:text="자동"
                 android:textColor="#FFFFFF" />
 
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:background="#3D4047"
+                android:background="@drawable/btn1"
                 android:text="스케줄"
                 android:textColor="#FFFFFF" />
 
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:background="#3D4047"
+                android:background="@drawable/btn1"
                 android:text="수동"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:background="#3D4047"
+                android:background="@drawable/btn1"
                 android:text="플라즈마"
                 android:textColor="#FFFFFF"
                 android:textSize="12sp" />
@@ -131,7 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:background="#3D4047"
+                android:background="@drawable/btn1"
                 android:text="물펌프"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
@@ -324,7 +324,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:background="#3D4047"
+                android:background="@drawable/btn1"
                 android:text="자동"
                 android:textColor="#FFFFFF" />
 
@@ -334,7 +334,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:background="#3D4047"
+                android:background="@drawable/btn1"
                 android:text="켜짐"
                 android:textColor="#FFFFFF" />
 
