--- a/app/src/main/res/layout/activity_plasma_detail.xml
+++ b/app/src/main/res/layout/activity_plasma_detail.xml
@@ -2,11 +2,18 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/prefresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="411dp"
+        tools:ignore="MissingConstraints,UnknownIdInLayout">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".PlasmaDetailActivity">
+        tools:context=".Activity.PlasmaDetailActivity">
 
         <TextView
             android:id="@+id/textView1"
@@ -339,6 +346,6 @@
                 android:textColor="#FFFFFF" />
 
         </LinearLayout>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </layout>
