--- a/app/src/main/res/layout/activity_popup_sensor.xml
+++ b/app/src/main/res/layout/activity_popup_sensor.xml
@@ -77,6 +77,42 @@
 
 
     <LinearLayout
+        android:id="@+id/l1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="37dp"
+        android:orientation="horizontal"
+        android:weightSum="10"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/sensor_memory">
+
+        <EditText
+            android:id="@+id/adress"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:layout_weight="7"
+            android:autoSizeTextType="uniform"
+            android:background="@drawable/border7"
+            android:enabled="false"
+            android:hint="주소선택"
+            android:padding="8dp"
+            android:paddingLeft="16dp"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/address_find"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@drawable/btn2"
+            android:text="찾기" />
+    </LinearLayout>
+
+    <LinearLayout
         android:id="@+id/linearLayout5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -89,7 +125,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sensor_memory">
+        app:layout_constraintTop_toBottomOf="@+id/l1">
 
         <Button
             android:id="@+id/cancleButton"
