--- a/app/src/main/res/layout/sensor_listview.xml
+++ b/app/src/main/res/layout/sensor_listview.xml
@@ -55,12 +55,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
                 android:weightSum="10">
 
                 <TextView
-                    android:id="@+id/text1"
+                    android:id="@+id/tv_addr"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
@@ -71,11 +71,40 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/s_port"
+                    android:id="@+id/s_addr"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
+                    android:layout_marginEnd="24dp"
+                    android:layout_weight="7"
+                    android:text="0000"
+                    android:textColor="#000000"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="8dp"
+                android:weightSum="10">
+
+                <TextView
+                    android:id="@+id/text1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_weight="3"
+                    android:text="포트"
+                    android:textColor="#000000"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/s_port"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp"
                     android:layout_weight="7"
                     android:text="0000"
