--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -3,9 +3,12 @@
 
 
     <item
-        android:id="@+id/mapFragment"
+        android:id="@+id/plasmaFragment"
         android:title="플라즈마" />
     <item
-        android:id="@+id/farmFragment"
+        android:id="@+id/sensorFragment"
         android:title="센서" />
+    <item
+        android:id="@+id/mapFragment"
+        android:title="악취지도" />
 </menu>
