--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -45,7 +45,7 @@
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="24dp"
                 android:clickable="true"
-                android:src="@android:drawable/ic_input_add"
+                android:src="@android:drawable/ic_menu_search"
                 android:tint="#FFFFFF"
                 android:visibility="visible"
                 app:backgroundTint="@color/main"
