--- a/app/src/main/res/layout/activity_popup_sensor.xml
+++ b/app/src/main/res/layout/activity_popup_sensor.xml
@@ -33,7 +33,7 @@
         android:layout_marginEnd="37dp"
         android:background="@drawable/border7"
         android:hint="악취센서 IP"
-        android:inputType="number"
+        android:inputType="number|text"
         android:paddingLeft="16dp"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -50,7 +50,7 @@
         android:layout_marginEnd="37dp"
         android:background="@drawable/border7"
         android:hint="악취센서 PORT 번호"
-        android:inputType="number|text"
+        android:inputType="numberSigned"
         android:paddingLeft="16dp"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
