--- a/app/src/main/res/layout/activity_popup_plasma.xml
+++ b/app/src/main/res/layout/activity_popup_plasma.xml
@@ -33,7 +33,7 @@
         android:layout_marginEnd="37dp"
         android:background="@drawable/border7"
         android:hint="플라즈마 PORT 번호"
-        android:inputType="number"
+        android:inputType="numberSigned"
         android:paddingLeft="16dp"
         android:textSize="17sp"
         app:layout_constraintEnd_toEndOf="parent"
